[squash]:Fix z-index in horizontal mode, z-index in lonely call

--- a/css/_filmstrip.scss
+++ b/css/_filmstrip.scss
@@ -72,7 +72,6 @@
              */
             .filmstrip__invite {
                 padding-bottom: 5px;
-                z-index: $dropdownZ;
                 margin-left: 2px;
             }
 
